src/objects/Product_Sales_Item__c.object
<CustomObject>
    <description>This is the staging object for Product Sales Items to be extracted from EDP</description>
    <fields>
        <fullName>AdditionalInformation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AdditionalInformation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ApprovedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ApprovedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Factor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capacity Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Capacity Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Sales Item description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDPLastModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>EDPLastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDP_ActiveStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDPActiveStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HWS_Unit_of_measure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit of measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRP_Price__c</fullName>
        <label>IRP Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IRP_Valid_From__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IRP Valid From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Is_PLI_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for verifying if price list item is processed or not</description>
        <label>Is_PLI_Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lattice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lattice</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LegacyCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyNcmCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LegacyNcmCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyRevision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LegacyRevision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lifecycle_Status__c</fullName>
        <description>Lifecycle Status of the Product line item</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lifecycle Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModifiedDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NSNAbbreviation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNAbbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCode__c</fullName>
        <description>The Product Code for the Sales Item</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>NSNCode</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCompliancyNotes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCompliancyNotes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSNCountryOrArea__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCountryOrArea</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNCustomsDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNCustomsDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSNDesignResponsibility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDesignResponsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNDoubleCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNDoubleCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNEncryption__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNEncryption</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNGic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNGic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNHwsPortfolio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNHwsPortfolio</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNMepRequired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNMepRequired</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNOldCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOldCode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNOldRevision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNOldRevision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPlanningStatus__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPlanningStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNPlanningType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNPlanningType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNProductHierarchy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNProductHierarchy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NSNProductLine__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNProductLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNProductSubArea__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNProductSubArea</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSAPMaterialType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSAPMaterialType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSAPMatnr__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSAPMatnr</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSalesItemCategory__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSalesItemCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSourceSystem__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSourceSystem</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSourceType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSourceType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNSummary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNSummary</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NSNTargtVariantConfig__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNTargtVariantConfig</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNVolumeUnit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNVolumeUnit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NSNVolume__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>NSNVolume</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Originator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PDMTimestamp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PDMTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RealPDMRevision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RealPDMRevision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Revision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Name__c</fullName>
        <description>Sales Item Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceTable__c</fullName>
        <description>Sales Item Source</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SourceTable</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialPricingIndicator__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SpecialPricingIndicator</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Sales Item Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>Product Sales Item</label>
    <nameField>
        <displayFormat>SI-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>